[package]
name = "flui-layer"
version = "0.1.0"
edition = "2021"
description = "Layer tree for FLUI compositor - part of 5-tree architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/flui"
keywords = ["ui", "gpu", "compositor", "layer", "rendering"]
categories = ["gui", "graphics", "rendering"]

[features]
default = []

# serde: opt-in serialization of layer-tree types. Activates serde on this
# crate's direct flui-* deps so that all forwarded geometry/paint types are
# also (de)serializable without the caller having to thread feature flags
# through every intermediate crate.
serde = ["dep:serde", "flui-painting/serde", "flui-types/serde"]

# schemars: opt-in JSON Schema derivation for the painted-scene IR
# (ADR-0004). Implies `serde` because schemars requires serde impls.
schemars = ["dep:schemars", "serde", "flui-painting/schemars"]

# testing: opt-in layer-tree test harness (`crate::testing`) — declarative
# LayerTree builder + structural/bounds inspection + a Diagnosticable-backed
# tree dump. Off by default; enabled for this crate's own dev targets via the
# self dev-dependency below, and forwarded by downstream crates that want it.
testing = []

[dependencies]
# Foundation - canonical ID types
flui-foundation = { path = "../flui-foundation" }

# Tree abstractions - TreeRead, TreeNav, etc.
flui-tree = { path = "../flui-tree" }

# Types - geometry, painting types
flui-types = { path = "../flui-types" }

# Painting - Canvas, DisplayList
flui-painting = { path = "../flui-painting" }

# Slab storage for O(1) access
slab = "0.4"

# Tracing for diagnostics
tracing = "0.1"

# Structured errors for LayerError
thiserror = { workspace = true }

# Serialization — optional; activated by the `serde` feature
serde = { workspace = true, optional = true }

# JSON Schema generation — optional; activated by the `schemars` feature
schemars = { workspace = true, optional = true }

[dev-dependencies]
# Self dev-dependency that turns the off-by-default `testing` feature on for
# this crate's own integration tests, so `tests/*.rs` can reach the harness.
flui-layer = { path = ".", features = ["testing"] }
