[package]
name = "flui-layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Layer tree for FLUI compositor - part of 5-tree architecture"
keywords = ["ui", "gpu", "compositor", "layer", "rendering"]
categories = ["gui", "graphics", "rendering"]

[features]
default = []

# testing: opt-in layer-tree test harness (`crate::testing`) — declarative
# LayerTree builder + structural/bounds inspection + a Diagnosticable-backed
# tree dump. Off by default; enabled for this crate's own dev targets via the
# self dev-dependency below, and forwarded by downstream crates that want it.
testing = []

[dependencies]
# Foundation - canonical ID types
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

# Tree abstractions - TreeRead, TreeNav, etc.
flui-tree = { path = "../flui-tree", version = "0.2.0" }

# Types - geometry, painting types
flui-types = { path = "../flui-types", version = "0.2.0" }

# Painting - Canvas, DisplayList
flui-painting = { path = "../flui-painting", version = "0.2.0" }

# Slab storage for O(1) access
slab = "0.4"

# Tracing for diagnostics
tracing = "0.1"

# Structured errors for LayerError
thiserror = { workspace = true }

[dev-dependencies]
# Self dev-dependency that turns the off-by-default `testing` feature on for
# this crate's own integration tests, so `tests/*.rs` can reach the harness.
flui-layer = { path = ".", version = "0.2.0", features = ["testing"] }
