[package]
name = "flui-objects"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Concrete RenderBox/RenderSliver catalog for Flui (the object catalog atop flui-rendering's engine)"
repository.workspace = true

[dependencies]
flui-rendering = { path = "../flui-rendering" }
flui-painting = { path = "../flui-painting" }
flui-types = { path = "../flui-types" }
flui-foundation = { path = "../flui-foundation" }
flui-tree = { path = "../flui-tree" }
tracing = { workspace = true }

[features]
default = []
# Forward `testing` feature so flui-objects' test crate can drive the
# real pipeline harness (RenderTester/Probe) without re-exporting it.
testing = ["flui-rendering/testing"]
serde = ["flui-types/serde"]

[dev-dependencies]
flui-rendering = { path = "../flui-rendering", features = ["testing"] }
flui-objects = { path = ".", features = ["testing"] }
flui-types = { path = "../flui-types" }
insta = { workspace = true }
flui-animation = { path = "../flui-animation" }
flui-scheduler = { path = "../flui-scheduler" }
