[package]
name = "flui-painting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canvas-based painting abstraction for FLUI - records drawing commands into DisplayList"
keywords = ["gui", "canvas", "painting", "2d-graphics", "rendering"]
categories = ["graphics", "gui", "rendering"]
readme = "README.md"
# Single-binary integration-test consolidation: every root test file is a
# module of `tests/main.rs` (one link of the full dep stack instead of 12
# separate binaries). See the `[[test]] name = "painting_it"` target below.
# Ambient-state note: no root test writes process-global state (the lazy
# `FONT_SYSTEM` `OnceLock` is benign once-init), so no isolated targets.
autotests = false

[dependencies]
flui-types = { path = "../flui-types", version = "0.2.0" }
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
parking_lot = { workspace = true }

# Text shaping and layout
cosmic-text = { version = "0.18" }

[dev-dependencies]
# Self dev-dependency that turns the off-by-default `testing` feature on for
# this crate's own integration tests, so `tests/*.rs` can reach the harness.
flui-painting = { path = ".", version = "0.2.0", features = ["testing"] }

[features]
serde = ["dep:serde", "flui-types/serde"]

# testing: opt-in painting test harness (`crate::testing`) — a `record`
# builder for `DisplayList`s plus diagnostics helpers. Off by default;
# enabled for this crate's dev targets via the self dev-dependency above.
testing = []

[[test]]
name = "painting_it"
path = "tests/main.rs"

[lints]
workspace = true
