[package]
name = "flui-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pipeline orchestration for FLUI - coordinates build, layout, and paint phases"
repository.workspace = true
keywords = ["ui", "pipeline", "rendering", "layout"]
categories = ["gui", "rendering"]

[dependencies]
# FLUI internal
flui-foundation = { path = "../flui-foundation" }
flui-tree = { path = "../flui-tree" }


# Core dependencies
tracing.workspace = true
parking_lot.workspace = true
thiserror.workspace = true

# Compile-time assertions
static_assertions = "1.1"

# Optional features
serde = { workspace = true, optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
default = []
# Enable parallel build
parallel = ["dep:rayon"]
# Enable serialization support
serde = ["dep:serde", "flui-foundation/serde"]
# Enable all features
full = ["parallel", "serde"]
