[package]
name = "flui-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Platform abstraction layer for FLUI - cross-platform window and input handling"

[dependencies]
flui-types = { path = "../flui-types" }

# UI Events - W3C compliant event types
ui-events = { workspace = true }
keyboard-types = "0.8"
dpi = "0.1"

# Windowing (for platform implementations)
winit = { workspace = true, optional = true }

# Error handling & logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Synchronization & Async
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
num_cpus = "1.16"
flume = "0.11"              # Better MPSC channels for UI thread communication
waker-fn = "1.2"            # Simplified async waker creation

# Window handle abstraction
raw-window-handle = "0.6"

# Bitflags for platform-specific flags
bitflags = "2.6"

# Windows platform
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

# macOS platform
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
cocoa-foundation = "0.2.0"
core-foundation = "0.10.0"
core-graphics = "0.24"
objc = "0.2"
foreign-types = "0.5"
block = "0.1"

[features]
default = ["desktop"]

# Platform features
desktop = ["winit"]

# Legacy winit backend (deprecated, optional)
winit-backend = ["winit"]

# Linux display server protocols
wayland = []
x11 = []

[dev-dependencies]
tracing-subscriber = { workspace = true }

# Re-export dependencies that might be needed by consumers
[package.metadata.docs.rs]
all-features = true
