[package]
name = "flui-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Platform abstraction layer for FLUI - cross-platform window and input handling"

[dependencies]
flui-types = { path = "../flui-types", version = "0.2.0" }

# UI Events - W3C compliant event types
ui-events = { workspace = true }
keyboard-types = "0.8"
dpi = "0.1"

# Windowing (for platform implementations)
winit = { workspace = true, optional = true }

# Clipboard (for winit backend)
arboard = { workspace = true, optional = true }

# Error handling & logging
anyhow = { workspace = true }
tracing = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# Window handle abstraction
raw-window-handle = "0.6"

# Bitflags for platform-specific flags
bitflags = "2.6"

# Windows platform
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

# macOS platform
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2"

# Android platform
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
libc = "0.2"

# Native-only async dependencies (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
num_cpus = "1.16"
flume = "0.12"                                                               # Better MPSC channels for UI thread communication

# Web/WASM platform
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    # Core DOM
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    # Events
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "PointerEvent",
    "KeyboardEvent",
    "WheelEvent",
    "MouseEvent",
    "FocusEvent",
    "UiEvent",
    # Rendering
    "CanvasRenderingContext2d",
    "DomRect",
    # Display
    "Screen",
    "MediaQueryList",
    "MediaQueryListEvent",
    # Observers
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    # Animation
    "Performance",
    # Clipboard
    "Clipboard",
    "Navigator",
    # Visibility
    "VisibilityState",
    # Location
    "Location",
    # Styling
    "CssStyleDeclaration",
    # Console
    "console",
] }
console_error_panic_hook = "0.1"

[features]
default = ["desktop"]

# Platform features
desktop = ["dep:winit"]

# winit fallback backend — primary on Linux until native Wayland/X11 lands
# (roadmap Cross.P); optional on Windows/macOS.
winit-backend = ["dep:winit", "dep:arboard"]

# Web platform
web = []

# Linux display server protocols
wayland = []
x11 = []

# The `unexpected_cfgs` check-cfg declaration for objc 0.2's
# `cfg(feature = "cargo-clippy")` probes lives in build.rs — Cargo forbids
# mixing local lint keys with `workspace = true`.
[lints]
workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true }

# Re-export dependencies that might be needed by consumers
[package.metadata.docs.rs]
all-features = true
