[package]
name = "flui-rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rendering layer for Flui framework"
repository.workspace = true

[dependencies]
flui-types = { path = "../flui-types" }
flui-painting = { path = "../flui-painting" }
flui-interaction = { path = "../flui-interaction" }
flui-foundation = { path = "../flui-foundation" }
flui-tree = { path = "../flui-tree" }
flui-layer = { path = "../flui-layer" }
flui-semantics = { path = "../flui-semantics" }

parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
once_cell = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
downcast-rs = "2.0"
slab = "0.4"                                  # For RenderTree storage
ambassador = { workspace = true }             # Trait delegation via procedural macros
crossbeam-channel = "0.5"                     # PipelineOwnerHandle bounded mark-dirty channel
rustc-hash = { workspace = true }             # FxHashSet for layout cycle guard (D-block U21)

[dev-dependencies]
criterion.workspace = true
mockall = "0.13"

[features]
default = []
serde = ["dep:serde", "flui-types/serde"]

# Cycle 4 R-18: gate `ScrollMetrics` trait + `FixedScrollMetrics` +
# `FixedExtentMetrics` (~452 LOC at `src/constraints/scroll_metrics.rs`)
# behind an off-by-default feature. The types had zero workspace
# consumers; gating prevents the dead surface from being compiled into
# every dependent build while keeping the code available for the
# scrolling integration that will eventually land. Opt in via
# `--features scrolling`.
scrolling = []

# Cycle 4 R-16: gate the delegate trait modules (~1,800 LOC across
# `delegates/custom_painter.rs`, `flow.rs`, `multi_child_layout.rs`,
# `single_child_layout.rs`, `sliver_grid.rs`, `custom_clipper.rs`)
# behind an off-by-default feature. Each delegate trait has zero
# production impls; gating removes the surface from default builds
# without deleting it. Opt in via `--features experimental-delegates`.
experimental-delegates = []
