[package]
name = "flui-rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rendering layer for Flui framework"
repository.workspace = true
# Benches are declared explicitly below; disable auto-discovery so the shared
# `benches/helpers.rs` module is not itself compiled as a standalone bench target.
autobenches = false

[dependencies]
flui-types = { path = "../flui-types" }
flui-painting = { path = "../flui-painting" }
flui-interaction = { path = "../flui-interaction" }
flui-foundation = { path = "../flui-foundation" }
flui-tree = { path = "../flui-tree" }
flui-layer = { path = "../flui-layer" }
flui-semantics = { path = "../flui-semantics" }

parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
downcast-rs = "2.0"
dyn-clone = "1.0"
slab = "0.4"                       # For RenderTree storage
crossbeam-channel = "0.5"          # PipelineOwnerHandle bounded mark-dirty channel
rustc-hash = { workspace = true }  # FxHashSet for layout cycle guard (D-block U21)

# Segmented-stack growth for the recursive pipeline walks (layout /
# paint / hit-test / intrinsics). A ~1000-level chain overflows the
# 1 MiB Windows main-thread stack without it; same discipline as
# rustc's ensure_sufficient_stack. Not needed on wasm32 (no stack
# switching there; the code falls back to plain recursion).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stacker = "0.1"

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "paint"
harness = false

# Virtualization core (ADR-0003 U1): O(log n) offset<->index seek both ways and
# O(log n) mid-list insert/delete vs a naive O(n) flat-array baseline.
[[bench]]
name = "virtualizer"
harness = false

# Headless render-object inspection runner. Gated on `testing` so the
# example only builds when the harness module is compiled in. Run with
# `cargo run -p flui-rendering --example render_inspector --features testing`.
[[example]]
name = "render_inspector"
required-features = ["testing"]

[dev-dependencies]
criterion.workspace = true
# Property-based tests for the virtualization B+-tree (ADR-0003 U1): random
# insert/delete/set_measured/set_count sequences checked against a naive
# Vec oracle + structural invariants. Test-only; no production dependency.
# Version matches flui-types / flui-interaction (already resolved in the lockfile).
proptest = "1.5"
# Snapshot testing for render-harness paint-phase (sub-project A).
insta.workspace = true
# Animation -> render-pipeline integration scenarios (tests only; no
# production dependency between the layers).
flui-animation = { path = "../flui-animation" }
flui-scheduler = { path = "../flui-scheduler" }
# Self dev-dependency that turns the off-by-default `testing` feature on
# for this crate's own integration tests (`tests/*.rs`), benches, and
# examples. Unit tests reach the harness via `cfg(test)`; the separate
# integration-test/bench/example crates link the normally-built library,
# so the feature must be flipped on for the dev build graph. This is the
# standard Cargo pattern for shipping a feature-gated test-support module
# without making it part of normal/release builds.
flui-rendering = { path = ".", features = ["testing"] }
# Concrete render-object catalog. The integration tests in `tests/*.rs`
# previously imported objects from `flui_rendering::objects`; after the
# flui-objects extraction (ADR-0008) they import from `flui_objects` instead.
# This is a dev-only dependency — flui-rendering does not depend on
# flui-objects in production (that would invert the layer order).
flui-objects = { path = "../flui-objects", features = ["testing"] }

[features]
default = []
# serde: no direct serde derives in this crate; forwards to flui-types/serde
# so downstream consumers enabling this feature get geometry/type serde impls.
serde = ["flui-types/serde"]

# testing: opt-in render-object test harness (`crate::testing`). Builds a
# real `PipelineOwner` tree from a declarative spec, drives the production
# layout/frame pipeline, and exposes a protocol-agnostic inspection surface
# (Box + Sliver). Off by default so it never lands in normal/release builds;
# enabled automatically for this crate's own dev targets via the self
# dev-dependency above. Downstream crates (e.g. flui-app) opt in explicitly.
# Forwards to `flui-layer/testing` so the layer-tree walkers (`structure`,
# `first_picture_bounds`, diagnostics dump) are reused rather than duplicated.
testing = ["flui-layer/testing"]

# Cycle 4 R-16: gate the delegate trait modules (~1,800 LOC across
# `delegates/custom_painter.rs`, `flow.rs`, `multi_child_layout.rs`,
# `single_child_layout.rs`, `sliver_grid.rs`, `custom_clipper.rs`)
# behind an off-by-default feature. Each delegate trait has zero
# production impls; gating removes the surface from default builds
# without deleting it. Opt in via `--features experimental-delegates`.
experimental-delegates = []
